# CNDA

./: Analysis.md  CMakeLists.txt  LICENSE  READEME.rst  README.md  README.rst  README.txt  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  INSTALL_DEPENDENCIES.md  bench_aos.cpp  bench_comparison.cpp  bench_core.cpp  bench_numpy_interop.py  run_all_benchmarks.ps1  run_all_benchmarks.sh.in
docs/: BENCHMARKING.md  CPP_USER_GUIDE.md  DESIGN.md  INSTALLATION.md  PYTHON_BINDINGS.md  PYTHON_USER_GUIDE.md  QUICKSTART.md
examples/: 01_python_roundtrip.py  02_cpp_to_numpy.py  03_aos_struct.py  04_zero_copy_success_vs_failure.py  05_error_handling.py  README.md
include/cnda/: aos_types.hpp  contiguous_nd.hpp
python/: aos_types.cpp  aos_types.hpp  cnda_bindings.cpp  module.cpp  utils.hpp
tests/: CMakeLists.txt  test_error_semantics.py  test_lifetime.py  test_numpy_interop.py  test_python_bindings.py  test_sanity.cpp
tests/cpp/aos/: test_basic.cpp  test_field_layout.cpp  test_indexing.cpp
tests/cpp/core/: test_alignment.cpp  test_dtypes.cpp  test_move_semantics.cpp  test_variadic_indexing.cpp
tests/python/aos/: __init__.py  test_basic_types.py  test_copy_semantics.py  test_error_handling.py  test_field_api.py  test_lifetime.py  test_numpy_interop.py
tests/python/core/: test_numpy_interop.py
